@@ -1,3 +1,8 @@
+2004-11-04  Vincent Noel  <vnoel@cox.net>
+
+	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
+	permissions instead of calling an extra gnome_vfs_get_file_info.
+
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (CloseLogMenu): Close the calendar when closing the log.
